<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
    android:id="@+id/card_places"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rowBG"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:padding="10dp"
            android:layout_margin="10dp"

            android:background="#d65819"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/edit_place"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_edit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_edit_24"
                        app:tint="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/delete_place"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_delete"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_delete"
                        app:tint="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowFG"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/place_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/created_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/created_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/created_date"
                    android:lines="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/place_name"
                    app:layout_constraintTop_toBottomOf="@+id/place_name" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/txtVisited"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/visited"
                    android:textColor="@color/teal_700"
                    android:lines="1"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/created_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </RelativeLayout>